FIxed Calender Squish

--- a/gator-delivery/src/components/index.css
+++ b/gator-delivery/src/components/index.css
@@ -5,9 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  border: 8px solid #ffffff;
+  
 }
-
 body > #root > div {
   height: 300px;
 }
@@ -64,8 +63,8 @@ body > #root > div {
 
 .body {
   padding: 10px;
-  display: flex;
-  justify-content: center
+  position: relative;
+  justify-content: center;
 }
 
 .task-form {
@@ -81,14 +80,22 @@ position: relative;
 display: inline-block;
 }
 
-  .lonk{
+.lonk{
     background-color: #007bff;
     color: white;
     padding: 15px;
     font-size: 17px;
     border: none;
     position: absolute;
-  }
+}
+
+.lenk
+
+.donk{
+  margin-left: 20px;
+  display: flex;
+  justify-content: center;
+}
 /* Dropdown Button */
 .dropbtn {
   background-color: #007bff;
